--- a/front/login.html
+++ b/front/login.html
@@ -20,8 +20,10 @@
                 <div class="login form-outline mb-4" style="margin-top: 20px;">
                     <label class="form-label" for="login">Логин</label>
                     <input type="text" id="login" name="login" class="login form-control mb-2">
+                    <div id="loginLabel"></div>
                     <label class="form-label" for="password">Пароль</label>
                     <input type="text" id="password" name="password" class="password  form-control">
+                    <div id="passwordLabel"></div>
                     <button class="btn btn-primary btn-block mt-2" onclick="login()">Войти</button>
                 </div>
             </div>
@@ -34,5 +36,6 @@
     </div>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="script.js"></script>
 </body>
 </html>
