--- a/front/reg.html
+++ b/front/reg.html
@@ -17,13 +17,15 @@
         <div>
             <div style="width: 300px;">
                 <div style="margin-top: 15px;"><h3>Регистрирация</h3></div>
-                <form class="login form-outline mb-4" style="margin-top: 20px;" action="/reg" method="post">
+                <div class="login form-outline mb-4" style="margin-top: 20px;">
                     <label class="form-label" for="login">Логин</label>
                     <input type="text" id="login" name="login" class="login form-control mb-2">
+                    <div id="loginLabel"></div>
                     <label class="form-label" for="password">Пароль</label>
                     <input type="text" id="password" name="password" class="password  form-control">
-                    <button class="btn btn-primary btn-block mt-2">Зарегистрироватся</button>
-                </form>
+                    <div id="passwordLabel"></div>
+                    <button class="btn btn-primary btn-block mt-2" onclick="reg()">Зарегистрироватся</button>
+                </div>
             </div>
             <div class="d-flex justify-content-center" style="margin-top: 20px;">
                 <form style="align-self: center;" action="/login" method="get" class="text-center">
@@ -34,5 +36,6 @@
     </div>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="script.js"></script>
 </body>
 </html>
