--- a/front/main.html
+++ b/front/main.html
@@ -30,19 +30,19 @@
                     <button id="login" class="mx-2 btn btn-outline-success">Войти</button>
                 </form>
             </li>
-            <li id="profile" class="nav-item" style="display: none;">
+            <li id="profilePage" class="nav-item" style="display: none;">
                 <form method="get" action="/profile">
-                    <button class="nav-link">Профиль</button>
+                    <button id="profile" class="nav-link">Профиль</button>
                 </form>
             </li>
-            <li id="adminPage" class="nav-item" style="display: none;">
+            <li id="adminPageNav" class="nav-item" style="display: none;">
                 <form method="get" action="/adminPage">
-                    <button class="nav-link">Админ</button>
+                    <button id="adminPage" class="nav-link">Админ</button>
                 </form>
             </li>
             <li id="logoutPage" class="nav-item" style="display: none;">
                 <button class="mx-2 btn btn-outline-danger" id="logout" onclick="logout()">Выйти</button>
-            </li>
+            </li>   
           </ul>
     </nav>
     <div>
