--- a/front/aboutUs.html
+++ b/front/aboutUs.html
@@ -47,7 +47,58 @@
     </nav>
     <div>
         <div class="d-flex pt-3 justify-content-center">
-            <h2>Пословицы</h2>
+            <h2>Информация о нас</h2>
+        </div>
+        <div class="aboutUsInfo d-flex pt-3 justify-content-center">
+            <div class="card" style="max-width: 540px; min-width: 350px;">
+                <div class="row g-0">
+                  <div class="col-md-4 d-flex" style="flex-direction: column; justify-content: center;">
+                    <img src="./images/photo_2024-02-23_00-56-11.jpg" class="img-fluid rounded" alt="Фото Есимгали">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Хамитов Есимгали</h5>
+                        <p class="card-text mb-2">SE-2206</p>
+                        <p class="card-text">Frontend разработчик</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </div>
+        <div class="aboutUsInfo d-flex pt-3 justify-content-center">
+            <div class="card" style="max-width: 540px; min-width: 350px;">
+                <div class="row g-0">
+                    <div class="col-md-4 d-flex" style="flex-direction: column; justify-content: center;">
+                        <img src="./images/photo_2024-02-23_01-00-30.jpg" class="img-fluid rounded-start" alt="Фото Есимгали">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Хайруллин Алишер</h5>
+                        <p class="card-text mb-2">SE-2207</p>
+                        <p class="card-text">Backend разработчик</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </div>
+        <div class="aboutUsInfo d-flex pt-3 justify-content-center">
+            <div class="card" style="max-width: 540px; min-width: 350px;">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img src="./images/zangar.jpg" class="img-fluid rounded-start" alt="Фото Есимгали">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Жунисбек Зангар</h5>
+                        <p class="card-text mb-2">SE-2207</p>
+                        <p class="card-text">Frontend разработчик</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
