--- a/front/adminPage.html
+++ b/front/adminPage.html
@@ -47,12 +47,48 @@
     </nav>
     <div>
         <div class="d-flex pt-3 justify-content-center">
-            <h2>Пословицы</h2>
+            <div class="text-center">
+                <h2>Пользователи</h2>
+                <button class="getData mt-3 btn btn-outline-primary" onclick="getData()">Получить пользователей</button>
+                <button class="addProverb mt-3 btn btn-outline-primary" onclick="show()">Добавить пословицу</button>
+            </div>
+            <div class="d-flex justify-content-center">
+                <div class="tableUsers" style="margin: 15px;"></div>
+            </div>
         </div>
     </div>
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="false">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="mb-3">
+                  <label for="categoryOfNew" class="col-form-label">Категория:</label>
+                  <input type="text" class="form-control" id="categoryOfNew">
+                </div>
+                <div class="mb-3">
+                  <label for="tilteOfNew" class="col-form-label">Пословица:</label>
+                  <input type="text" class="form-control" id="titleOfNew">
+                </div>      
+                <div class="mb-3">
+                  <label for="discriptionOfNew" class="col-form-label">Значение:</label>
+                  <input type="text" class="form-control" id="discriptionOfNew">
+                </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="cancleUpdateUser()" aria-label="Close">Close</button>
+              <button type="button" class="btn btn-primary" onclick="addProverb()">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script src="script.js"></script>
+<script src="scriptForAdmin.js"></script>
 </html>
