--- a/front/profile.html
+++ b/front/profile.html
@@ -50,8 +50,16 @@
             <table class="table" style="width: 500px;">
                 <tbody class="profileInformation">
                 </tbody>
-              </table>
+            </table>
         </div>
+        <div class="d-flex pt-3 justify-content-center">
+            <div class="text-center">
+                <h2>Лучшие пословицы</h2>
+                <button class="getData mt-3 btn btn-outline-primary" onclick="getData()">Показать пословицы</button>
+            </div>
+            <div class="d-flex justify-content-center">
+                <div class="tableProverbs" style="margin: 15px;"></div>
+            </div>
         </div>
     </div>
 </body>
@@ -59,4 +67,5 @@
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script src="script.js"></script>
+<script src="scriptForProfile.js"></script>
 </html>
