--- a/front/proverbs.html
+++ b/front/proverbs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proberbs</title>
+    <title>Proverbs</title>
 </head>
 <body>
     <nav class="w-100 my-3">
@@ -79,7 +79,15 @@
             </div>
         </div>
     </div>
-    <div></div>
+    <div class="d-flex pt-3 justify-content-center">
+        <div class="text-center">
+            <h2>Пословицы</h2>
+            <button class="getData my-2 btn btn-outline-primary" onclick="getData()">Показать пословицы</button>
+        </div>
+        <div class="d-flex justify-content-center">
+            <div class="tableProverbs" style="margin: 15px;"></div>
+        </div>
+    </div>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
